update math formula

--- a/linear_reg_multi_predictors.ipynb
+++ b/linear_reg_multi_predictors.ipynb
@@ -41,35 +41,30 @@
     "主要计算公式\n",
     "\n",
     "以下 $X$ 为设计矩阵 design matrix\n",
-    "\n",
-    "$\n",
-    "\\hat\\beta = (X^T X)^{-1} X^T y \\\\\n",
-    "H = X (X^T X)^{-1} X^T \\\\\n",
-    "\\hat{y} = X \\hat\\beta = X (X^T X)^{-1} X^T y = H y \\\\\n",
-    "H = H^T \\\\\n",
-    "H = H^2 \\\\\n",
-    "tr(H) = \\sum_{i=1}^{n} h_{ii} = p + 1 \\\\\n",
-    "\\,\\\\\n",
-    "\\,\\\\\n",
-    "Var(e_i) = (1 - h_{ii})\\,\\sigma^2,\\,i=1,2,\\dots,n \\\\\n",
-    "\\hat\\sigma^2 = {1 \\over {n - p - 1}} \\sum_{i=1}^n e_i^2 \\\\\n",
-    "Var(\\hat\\beta) = \\sigma^2\\,(X^T X)^{-1} \\\\\n",
-    "\\hat\\beta \\sim N[\\beta, \\sigma^2\\,(X^T X)^{-1}] \\\\\n",
-    "C = (X^T X)^{-1} \\\\\n",
-    "\\hat\\beta_j \\sim N(\\beta_j, c_{jj}\\sigma^2) \\\\\n",
-    "E(\\hat\\beta_j) = \\beta_j, Var(\\hat\\beta_j) = c_{jj}\\,\\sigma^2,\\,j=0,1,\\dots,p \\\\\n",
-    "\\,\\\\\n",
-    "\\,\\\\\n",
-    "S_R = \\sum_{i=1}^n (\\hat{y}_i - \\bar{y})^2 \\\\\n",
-    "S_E = \\sum_{i=1}^n (y_i - \\hat{y}_i)^2 \\\\\n",
-    "S_T = \\sum_{i=1}^n (y_i - \\bar{y})^2 = S_R + S_E \\\\\n",
-    "R^2 = {S_R \\over S_T} = 1 - {S_E \\over S_T} \\\\\n",
-    "\\,\\\\\n",
-    "\\,\\\\\n",
-    "S_E / \\sigma^2 \\sim \\chi^2(n-p-1) \\\\\n",
-    "F = { {S_R\\,/\\,p} \\over {S_E\\,/\\,(n-p-1)}} \\sim F(p, n-p-1) \\\\\n",
-    "t_j = { { \\hat\\beta_j - \\beta_j } \\over { \\sqrt{c_{jj}} \\cdot \\hat\\sigma } } \\sim t(n-p-1) \\\\\n",
-    "$"
+    "<br/><br/>\n",
+    "- $\\hat\\beta = (X^T X)^{-1} X^T y$\n",
+    "- $H = X (X^T X)^{-1} X^T$\n",
+    "- $\\hat{y} = X \\hat\\beta = X (X^T X)^{-1} X^T y = H y$\n",
+    "- $H = H^T$\n",
+    "- $H = H^2$\n",
+    "- $tr(H) = \\sum_{i=1}^{n} h_{ii} = p + 1$\n",
+    "<br/><br/>\n",
+    "- $Var(e_i) = (1 - h_{ii})\\,\\sigma^2,\\,i=1,2,\\dots,n$\n",
+    "- $\\hat\\sigma^2 = {1 \\over {n - p - 1}} \\sum_{i=1}^n e_i^2$\n",
+    "- $Var(\\hat\\beta) = \\sigma^2\\,(X^T X)^{-1}$\n",
+    "- $\\hat\\beta \\sim N[\\beta, \\sigma^2\\,(X^T X)^{-1}]$\n",
+    "- $C = (X^T X)^{-1}$\n",
+    "<br/><br/>\n",
+    "- $\\hat\\beta_j \\sim N(\\beta_j, c_{jj}\\sigma^2)$\n",
+    "- $E(\\hat\\beta_j) = \\beta_j, Var(\\hat\\beta_j) = c_{jj}\\,\\sigma^2,\\,j=0,1,\\dots,p$\n",
+    "- $S_R = \\sum_{i=1}^n (\\hat{y}_i - \\bar{y})^2$\n",
+    "- $S_E = \\sum_{i=1}^n (y_i - \\hat{y}_i)^2$\n",
+    "- $S_T = \\sum_{i=1}^n (y_i - \\bar{y})^2 = S_R + S_E$\n",
+    "- $R^2 = {S_R \\over S_T} = 1 - {S_E \\over S_T}$\n",
+    "<br/><br/>\n",
+    "- $S_E / \\sigma^2 \\sim \\chi^2(n-p-1)$\n",
+    "- $F = { {S_R\\,/\\,p} \\over {S_E\\,/\\,(n-p-1)}} \\sim F(p, n-p-1)$\n",
+    "- $t_j = { { \\hat\\beta_j - \\beta_j } \\over { \\sqrt{c_{jj}} \\cdot \\hat\\sigma } } \\sim t(n-p-1)$"
    ]
   },
   {
